--- a/less/includes/constants.less
+++ b/less/includes/constants.less
@@ -5,6 +5,7 @@
 
 @black: #000000;
 
+@lightestGray: #DCDCDC;
 @lightGray: #C0C0C0; //#DCDCDC
 @mediumGray: #696969;
 
@@ -12,17 +13,20 @@
 @mediumGreen: #1D761D;
 
 @yellow: #E6E600;
+@darkYellow: #FFB90F;
 
 @red: #CF0000;
 
+@purple: #8A2BE2;
+
 //Constants for components
 
-@backgroundColor: @black;
+@backgroundColor: @lightestGray;
 @headingColor: @maroon;
 @blockBackground: @mediumGray;
 @headerBackground: @maroon;
 
-@textColor: @white;
+@textColor: @black;
 
 //Tabs
 @tabBackground: @mediumGray;
@@ -33,8 +37,8 @@
 @tableText: @black;
 
 //Links
-@linkColor: @yellow;
-@linkVisitedColor: @lightGray;
+@linkColor: @darkYellow;
+@linkVisitedColor: @darkYellow;
 @linkHoverColor: @lightGreen;
 
 //Colors for status messages
