--- a/less/includes/components.less
+++ b/less/includes/components.less
@@ -1,8 +1,9 @@
 .block {
-	background-color: @blockBackground;
+	//background-color: @blockBackground;
+	.gray-flat-gradient;
 	padding: 10px;
-	border: 1px solid lighten(@blockBackground, 60%);
 	margin: 10px;
+	.rounded;
 }
 
 #section-header {
@@ -22,6 +23,7 @@
 
 ul.tabs li a {
 	color: @tabText;
+	.top_rounded
 }
 
 ul.tabs li.active a {
