--- a/less/includes/constants.less
+++ b/less/includes/constants.less
@@ -2,6 +2,7 @@
 @maroon: #800000;
 
 @white: #FFFAFA;
+@offWhite: #F8F8FF;
 
 @black: #000000;
 
@@ -13,7 +14,7 @@
 @mediumGreen: #1D761D;
 
 @yellow: #E6E600;
-@darkYellow: #FFB90F;
+@darkYellow: darken(#FFB90F, 5%);
 
 @red: #CF0000;
 
@@ -21,9 +22,10 @@
 
 //Constants for components
 
-@backgroundColor: @lightestGray;
+@backgroundColor: @offWhite;
 @headingColor: @maroon;
-@blockBackground: @mediumGray;
+//@blockBackground: @mediumGray;
+@blockBackground: @lightestGray;
 @headerBackground: @maroon;
 
 @textColor: @black;
