--- a/less/includes/mixins.less
+++ b/less/includes/mixins.less
@@ -5,6 +5,18 @@
 	-webkit-border-radius:@radius;
 }
 
+//Only the top is rounded
+.top_rounded(@radius: 5px) {
+	-webkit-border-top-left-radius: @radius;
+	-khtml-border-radius-topleft: @radius;
+	-moz-border-radius-topleft: @radius;
+	border-top-left-radius: @radius;
+	-webkit-border-top-right-radius: @radius;
+	-khtml-border-radius-topright: @radius;
+	-moz-border-radius-topright: @radius;
+	border-top-right-radius: @radius;
+}
+
 .maroon-gradient {
 	/* Note: This gradient may render differently in browsers that don't support the unprefixed gradient syntax */
 	
@@ -25,4 +37,18 @@
 	
 	/* W3C Markup, IE10 Release Preview */ 
 	background-image: linear-gradient(to bottom right, #A80C0C 0%, #210306 100%);
+	
+	.rounded(10px)
+}
+
+//http://www.colorzilla.com/gradient-editor/ Grey Flat
+.gray-flat-gradient {
+	background: #eeeeee; /* Old browsers */
+	background: -moz-linear-gradient(top,  #eeeeee 0%, #eeeeee 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eeeeee), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #eeeeee 0%,#eeeeee 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #eeeeee 0%,#eeeeee 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #eeeeee 0%,#eeeeee 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #eeeeee 0%,#eeeeee 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
 }
